Fix java.lang.reflect.InaccessibleObjectException: Unable to make field private jakarta.ws.rs.core.Configuration org.glassfish.json.jaxrs.JsonValueBodyWriter.config accessible: module org.glassfish.json.jaxrs does not "opens org.glassfish.json.jaxrs" to module org.glassfish.hk2.utilities